# trajectory

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  docker-compose.yml
.github/workflows/: ci.yml
proto/: gtfs-realtime.proto
sql/: schema.sql  schema_timescaledb.sql
sql/queries/: latency.sql
src/: config.rs  error.rs  http.rs  lib.rs  main.rs  scheduler.rs  telemetry.rs
src/ingestors/: adsb.rs  adsbfi.rs  adsblol.rs  adsbone.rs  airplaneslive.rs  ais.rs  bratwurst.rs  gtfs_realtime.rs  gtfs_static.rs  irail.rs  mod.rs  oebb.rs  opensky.rs  satellites.rs  sbb.rs
src/scheduler/: mod.rs  simple.rs
src/storage/: mod.rs  models.rs  pool.rs  queries.rs  retention.rs
src/utils/: mod.rs
systemd/: trajectory.service
tests/: storage.rs
