[package]
name = "trajectory"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Real-time ingestion daemon for aircraft, ship, train, and satellite trajectories"
license = "MIT"
repository = "https://github.com/rarebu/trajectory"
readme = "README.md"

[[bin]]
name = "trajectory"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "fs", "io-util", "sync", "signal", "macros"] }

reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls", "cookies"], default-features = false }

yawc = "0.1"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
webpki-roots = "0.26"
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }

chrono = { version = "0.4", features = ["serde"] }

anyhow = "1"
thiserror = "2"

prost = "0.13"

[dev-dependencies]
testcontainers = "0.23"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
prost-build = "0.13"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "thin"
